# BeatDrop-Music-Visualizer

./: .gitignore  APPLICABLE LICENSES.md  BeatDrop.sln  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  Milkwave.sln  README.md  TODO.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: auto-update-vcpkg-baseline.yml  build.yml  build_alt.yml  build_cmake.yml  build_cmake.yml.bak  build_release.yml  build_release_cmake.yml  build_release_oldos.yml  build_release_oldos_cmake.yml  build_release_oldos_vcpkg.yml  build_release_vcpkg.yml  build_vcpkg.yml
BeatDrop/: beatdrop.ini  beatdrop_msg.ini
Remote/: App.config  DarkModeCS.cs  MilkwaveInfoForm.Designer.cs  MilkwaveInfoForm.cs  MilkwaveInfoForm.resx  MilkwaveRemote.csproj  MilkwaveRemoteForm.Designer.cs  MilkwaveRemoteForm.cs  MilkwaveRemoteForm.resx  Preset.cs  Program.cs  Settings.cs  milkwave-default.txt  script-default.txt
Remote/Data/: Preset.cs  RemoteHelper.cs  Settings.cs
Remote/Properties/: Resources.Designer.cs  Resources.resx  Settings.Designer.cs  Settings.settings
Visualizer/: LICENSE.txt
audio/: audiobuf.cpp  audiobuf.h  audiodevicehandler.cpp  audiodevicehandler.h  common.h  loopback-capture.cpp  loopback-capture.h  prefs.cpp
lib/: projectM_eval.lib  projectM_ns-eel2.lib
resources/: PRESET LICENSE.md  beatdrop.ini  beatdrop_img.ini  beatdrop_msg.ini  precache.txt
spoutDX9/: SpoutDX9.cpp  SpoutDX9.h  SpoutFrameCount.cpp
vis_milk2/: AMDDetection.cpp  AMDDetection.h  CMakeLists.txt  MediaTexture.cpp  MediaTexture.h  Milkdrop2PcmVisualizer.cpp  Milkdrop2PcmVisualizer.h  defines.h  dxcontext.cpp  dxcontext.h  md_defines.h  milkdropfs.cpp  plugin.cpp  plugin.h  plugin.rc  plugin.vcxproj  plugin.vcxproj.filters  pluginshell.cpp  pluginshell.h  resource.h  songtitlegetter.cpp  songtitlegetter.h  state.cpp  state.h  texmgr.cpp  texmgr.h  utility.cpp
(+558 files in other folders)
